--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.6.4' %}
+{% set version = '1.8.4' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,7 +10,7 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/kinship2_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/kinship2/kinship2_{{ version }}.tar.gz
-  sha256: d2a76aee1a07acf0503acfbe155eeb783d83ee9d8e4428449adf0ea455f123a7
+  sha256: 33d853ed555935e5eb38072fd1de91034eac5d44c69b4b4744ec8add3e9614a3
 
 build:
   merge_build_host: True  # [win]
@@ -34,19 +34,19 @@ requirements:
 
 test:
   commands:
-    - $R -e "library('kinship2')"           # [unix]
+    - $R -e "library('kinship2')"           # [not win]
     - "\"%R%\" -e \"library('kinship2')\""  # [win]
 
 about:
-  home: http://r-forge.r-project.org
+  home: https://cran.r-project.org/package=kinship2
   license: GPL (>= 2)
-  summary: Routines to handle family data with a pedigree object. The initial purpose was to
-    create correlation structures that describe  family relationships such as kinship
-    and identity-by-descent, which can be used to model family data in mixed effects
-    models, such as in the  coxme function.  Also includes a tool for pedigree drawing
-    which is  focused on producing compact layouts without intervention.  Recent additions
-    include utilities to trim the pedigree object with various criteria, and  kinship
-    for the X chromosome.
+  summary: 'Routines to handle family data with a pedigree object (2014, <doi: 10.1159/000363105>).
+    The initial purpose was to create correlation structures that describe family relationships
+    such as kinship and identity-by-descent, which can be used to model family data
+    in mixed effects models, such as in the coxme function. Also includes a tool for
+    pedigree drawing which is focused on producing compact layouts without intervention.
+    Recent additions include utilities to trim the pedigree object with various criteria,
+    and kinship for the X chromosome.'
   license_family: GPL3
   license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
 
@@ -54,3 +54,22 @@ extra:
   recipe-maintainers:
     - conda-forge/r
     - npavlovikj
+
+# Package: kinship2
+# Version: 1.8.4
+# Date: 2019-5-31
+# Title: Pedigree Functions
+# Authors@R: c( person("Jason", "Sinnwell", email="sinnwell.jason@mayo.edu", role=c("aut","cre")), person("Terry", "Therneau", role="aut"), person("Daniel", "Schaid", role="ctb"), person("Elizabeth", "Atkinson", role="ctb"), person("Carly", "Mester", role='ctb'))
+# Depends: R (>= 3.4.0), Matrix, quadprog
+# Suggests: knitr
+# Imports: graphics, stats, methods
+# Description: Routines to handle family data with a pedigree object (2014, <doi: 10.1159/000363105>). The initial purpose was to create correlation structures that describe family relationships such as kinship and identity-by-descent, which can be used to model family data in mixed effects models, such as in the coxme function. Also includes a tool for pedigree drawing which is focused on producing compact layouts without intervention. Recent additions include utilities to trim the pedigree object with various criteria, and kinship for the X chromosome.
+# License: GPL (>= 2)
+# VignetteBuilder: knitr
+# URL: https://cran.r-project.org/package=kinship2
+# NeedsCompilation: no
+# Packaged: 2019-05-31 19:58:13 UTC; sinnwell
+# Author: Jason Sinnwell [aut, cre], Terry Therneau [aut], Daniel Schaid [ctb], Elizabeth Atkinson [ctb], Carly Mester [ctb]
+# Maintainer: Jason Sinnwell <sinnwell.jason@mayo.edu>
+# Repository: CRAN
+# Date/Publication: 2019-05-31 21:30:17 UTC
